--- a/src/internal/web/template/account.html
+++ b/src/internal/web/template/account.html
@@ -15,33 +15,43 @@
   </head>
   <body>
     <header class="header-wrapper bg-white">
-      <div class="header m-auto flex items-center bg-white">
-        <a href="/index">
-          <div class="header-link bg-white">
-            TOP
-          </div>
-        </a>
-        <a href="/free-time">
-          <div class="header-link bg-white">
-            FREE-TIME LATEST
-          </div>
-        </a>
-        <a href="/free-times">
-          <div class="header-link bg-white">
-            FREE-TIMES
-          </div>
-        </a>
-        <a href="/share/with_someone">
-          <div class="header-link bg-white">
-            SHARE
-          </div>
-        </a>
-        <a href="/account/">
-          <div class="header-link bg-white">
-            ACCOUNT
-          </div>
-        </a>
-        <div class="bg-white today-date font-24">
+      <div class="header m-auto items-center flex bg-white">
+        <div class="header-link-wrapper">
+          <a href="/index">
+            <div class="header-link">
+              <p class="font-24 letter-005">TOP</p>
+            </div>
+          </a>
+        </div>
+        <div class="header-link-wrapper">
+          <a href="/free-time">
+            <div class="header-link">
+              <p class="font-24 letter-005">FREE-TIME LATEST</p>
+            </div>
+          </a>
+        </div>
+        <div class="header-link-wrapper">
+          <a href="/free-times">
+            <div class="header-link">
+              <p class="font-24 letter-005">FREE-TIMES</p>
+            </div>
+          </a>
+        </div>
+        <div class="header-link-wrapper">
+          <a href="/share/with_someone">
+            <div class="header-link">
+              <p class="font-24 letter-005">SHARE</p>
+            </div>
+          </a>
+        </div>
+        <div class="header-link-wrapper">
+          <a href="/account/">
+            <div class="header-link">
+              <p class="font-24 letter-005">ACCOUNT</p>
+            </div>
+          </a>
+        </div>
+        <div id="today-wrapper" class="text-center font-24">
           <span id="today" class="blinking"></span>
         </div>
       </div>
@@ -350,80 +360,6 @@
                   </a>
                 </div>
               </div>
-              <!-- <div class="info-area flex">
-                <div class="info-description-wrapper flex-col">
-                  <label for="number">SHARERS</label>
-                  <p class="">共有している人数</p>
-                </div>
-                <div class="info-result-wrapper">
-
-                </div>
-                <div class="info-change-button-wrapper">
-
-                </div>
-              </div>
-              <div class="info-area flex">
-                <div class="info-description-wrapper flex-col">
-                  <label for="number">SHARERS</label>
-                  <p class="">共有している人数</p>
-                </div>
-                <div class="info-result-wrapper">
-
-                </div>
-                <div class="info-change-button-wrapper">
-
-                </div>
-              </div> -->
-
-
-
-              <!-- <div class="info-box flex">
-                <div class="detail-box">
-
-                </div>
-                <div class="result-box">
-                  <p>02 人</p>
-                </div>
-              </div>
-              <div class="my-info">
-                <label for="number">SHARERS</label>
-                <div class="info-box flex">
-                  <div class="detail-box">
-                    <p>共有されている人数</p>
-                  </div>
-                  <div class="result-box">
-                    <p>02 人</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="my-info">
-                <label for="logout">LOGOUT</label>
-                <div class="info-box">
-                  <div class="detail-box-password flex-col">
-                    <p>ログアウトはこちら</p>
-                    <form action="" class="logout-button-wrapper">
-                      <button class="logout-button text-center button-darkgreen">
-                        LOGOUT
-                      </button>
-                    </form>
-                  </div>
-                </div>
-              </div>
-              <div class="my-info">
-                <label for="logout">LOGOUT</label>
-                <div class="info-box">
-                  <div class="detail-box-password flex-col">
-                    <p>ログアウトはこちら</p>
-                    <form action="" class="logout-button-wrapper">
-                      <button class="logout-button text-center button-darkgreen">
-                        LOGOUT
-                      </button>
-                    </form>
-                  </div>
-                </div>
-              </div> -->
-
             </div>
           </div>
         </div>
