--- a/src/internal/web/static/css/header.css
+++ b/src/internal/web/static/css/header.css
@@ -4,7 +4,6 @@
   position: fixed;
   z-index: 20;
 }
-
 .header {
   width: 97%;
   height: 10vh;
@@ -16,74 +15,55 @@
   border-left-width: 20px;
   box-shadow: 7px 2px 10px rgba(0,0,0,.6);
 }
-
-.today-date {
-  margin: 0 40px 0 auto;
-  padding: 4px 12px;
-  border: none;
-  border-right: 1.5px solid var(--WOOD);
-  border-bottom: 1.5px solid var(--WOOD);
-  box-shadow: 3px 3px 5px rgba(54, 54, 54,.3);
+.header-link-wrapper {
+  height: 60%;
+  margin-left: 2%;
+  background-color:antiquewhite;
 }
-
+.header-link-wrapper:nth-child(1) {
+  width: 6%;
+}
+.header-link-wrapper:nth-child(2) {
+  width: 20%;
+}
+.header-link-wrapper:nth-child(3) {
+  width: 13%;
+}
+.header-link-wrapper:nth-child(4) {
+  width: 8%;
+}
+.header-link-wrapper:nth-child(5) {
+  width: 10%;
+}
 .header-link {
-  margin-left: 30px;
-  padding: 4px 12px;
-  font-size: 24px;
-  letter-spacing: 0.05em;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: none;
   border-right: 1.5px solid var(--WOOD);
   border-bottom: 1.5px solid var(--WOOD);
   background-color: var(--SNOW);
-  box-shadow: 3px 3px 5px rgba(54, 54, 54, 0.3);
+  box-shadow: 7px 7px 7px rgba(54, 54, 54, 0.3);
 }
 
-/* アコーディオンメニュー */
-.acd-check{
-  display: none;
-}
-.acd-label{
-  margin-left: 30px;
-  font-size: 24px;
-  padding: 4px 4px;
-  border: 1px solid var(--WOOD);
-  display: block;
-}
-.acd-content{
-  position: absolute;
-  width: 123px;
-  top: 72px;
-  border-left: 1px solid var(--WOOD);
-  border-right: 1px solid var(--WOOD);
-  border-bottom: 1px solid var(--WOOD);
-  background-color: var(--WHITE);
-  height: 0;
-  opacity: 0;
-  margin-left: 30px;
-  padding: 0 10px;
-  transition: .5s;
-  visibility: hidden;
-  z-index: 30;
-
-}
-.acd-check:checked + .acd-label + .acd-content{
-  height: 95px;
-  opacity: 1;
-  padding: 10px;
-  visibility: visible;
-}
-
-.acd-content-link {
-  padding: 4px 12px;
-  border-radius: 8px;
-  background-color: var(--BURLYWOOD);
+#today-wrapper {
+  width: 27%;
+  height: 44%;
+  margin: 0 auto;
+  padding: 0.5% 1%;
+  border: none;
+  border-right: 1.5px solid var(--WOOD);
+  border-bottom: 1.5px solid var(--WOOD);
+  box-shadow: 7px 7px 7px rgba(54, 54, 54, 0.3);
 }
 
 /* 現在時刻を点滅させる */
 .blinking{
-	-webkit-animation:blink 1.5s ease-in-out infinite alternate;
-  -moz-animation:blink 1.5s ease-in-out infinite alternate;
-  animation:blink 1.5s ease-in-out infinite alternate;
+	-webkit-animation:blink 2s ease-in-out infinite alternate;
+  -moz-animation:blink 2s ease-in-out infinite alternate;
+  animation:blink 2s ease-in-out infinite alternate;
 }
 @-webkit-keyframes blink{
     0% {opacity:0;}
