[Fix] アカウントページのボタンを修正

--- a/src/internal/web/template/account.html
+++ b/src/internal/web/template/account.html
@@ -62,27 +62,38 @@
         <div class="title-area bg-white">
           <h1 class="text-center">ACCOUNT PAGE</h1>
         </div>
+        <div class="account-title-area-button-wrapper">
+          <a href="/account/edit">
+            <div class="account-title-area-button bg-oldlace">
+              <p class="text-center font-20 letter-01">ACCOUNT EDIT</p>
+            </div>
+          </a>
+        </div>
+        <div class="account-title-area-button-wrapper">
+          <a href="/logout">
+            <div class="account-logout-button button-darkgreen">
+              <p class="text-center font-20 letter-01">LOGOUT</p>
+            </div>
+          </a>
+        </div>
+        <!-- <div class="account-title-area-button-wrapper items-center justify-center">
+          <a>
+            <div class="account-title-area-button">
+              <p>ACCOUNT EDIT</p>
+            </div>
+          </a>
+        </div>
         <div class="sharing-button-wrapper mr flex">
-          <button id="icon-list-display-button" class="title-area-button text-center bg-oldlace">
-            <div class="letter-01 font-18">
-              EDIT ICON
-            </div>
-          </button>
-          <button id="username-change-form-display-button" class="title-area-button text-center bg-oldlace">
-            <div class="letter-01 font-18">
-              EDIT USERNAME
-            </div>
-          </button>
           <button id="password-change-form-display-button" class="title-area-button text-center bg-oldlace">
             <div class="letter-01 font-18">
-              EDIT PASSWORD
+              ACCOUNT EDIT
             </div>
           </button>
-          <button id="email-change-form-display-button" class="title-area-button text-center bg-oldlace">
+          <button id="email-change-form-display-button" class="title-area-button text-center button-darkgreen">
             <div class="letter-01 font-18">
-              EDIT E-MAIL
+              LOGOUT
             </div>
-          </button>
+          </button> -->
         </div>
       </div>
 
