--- a/src/internal/web/static/css/main.css
+++ b/src/internal/web/static/css/main.css
@@ -1,6 +1,8 @@
 /* =================== main ====================== */
 
 .main {
+  width: 100%;
+  height: 87vh;
   padding-top: 13vh;
 }
 
@@ -64,14 +66,14 @@
 
 .title-area-wrapper {
   width: 100%;
-  height: 70px;
+  height: 10%;
+  margin-top: 1%;
 }
 
 .title-area {
   position: relative;
   display: inline-block;
-  margin-top: 20px;
-  margin-left: 70px;
+  margin-left: 2.5%;
   width: 30%;
   height: 100%;
   border: none;
@@ -115,14 +117,6 @@
   box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 5px 5px 10px 0px rgba(0, 0, 0, 0.3);
 }
 
-.sharing-button-wrapper {
-  width: 100%;
-  height: 70px;
-  margin-top: 20px;
-  align-items: center;
-  justify-content: center;
-}
-
 .title-area-button-wrapper {
   width: 10%;
 }
@@ -139,7 +133,6 @@
   overflow: hidden;
   box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 4px 4px 5px 0px rgba(43, 43, 43, 0.3);
 }
-
 .title-area-button::before {
   content: "";
   display: block;
@@ -170,6 +163,102 @@
   transform: translateX(-100%);
 }
 .title-area-button:hover::after {
+  transform: translateX(100%);
+}
+
+.account-title-area-button-wrapper {
+  width: 17%;
+  height: 100%;
+  margin-top: 0.5%;
+  margin-left: 5%;
+}
+
+.account-title-area-button {
+  width: 100%;
+  height: 90%;
+  margin-left: 100%;
+  line-height: 180%;
+  text-decoration: none;
+  border-radius: 8px;
+  position: relative;
+  transition: 0.3s;
+  overflow: hidden;
+  box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 4px 4px 5px 0px rgba(43, 43, 43, 0.3);
+}
+.account-title-area-button::before {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 75%;
+  position: absolute;
+  left: 0;
+  background-color: var(--WOOD);
+  transition: .3s;
+}
+.account-title-area-button::after {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 75%;
+  position: absolute;
+  right: 0;
+  background-color: var(--WOOD);
+  transition: .3s;
+}
+.account-title-area-button::before {
+  top: 0;
+}
+.account-title-area-button::after {
+  bottom: 0;
+}
+.account-title-area-button:hover::before {
+  transform: translateX(-100%);
+}
+.account-title-area-button:hover::after {
+  transform: translateX(100%);
+}
+.account-logout-button {
+  width: 100%;
+  height: 90%;
+  margin-left: 100%;
+  line-height: 180%;
+  text-decoration: none;
+  border-radius: 8px;
+  position: relative;
+  transition: 0.3s;
+  overflow: hidden;
+  box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 4px 4px 5px 0px rgba(43, 43, 43, 0.3);
+}
+.account-logout-button::before {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 75%;
+  position: absolute;
+  left: 0;
+  background-color: var(--SNOW);
+  transition: .3s;
+}
+.account-logout-button:after {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 75%;
+  position: absolute;
+  right: 0;
+  background-color: var(--SNOW);
+  transition: .3s;
+}
+.account-logout-button::before {
+  top: 0;
+}
+.account-logout-button::after {
+  bottom: 0;
+}
+.account-logout-button:hover::before {
+  transform: translateX(-100%);
+}
+.account-logout-button:hover::after {
   transform: translateX(100%);
 }
 
