--- a/src/internal/web/template/account.html
+++ b/src/internal/web/template/account.html
@@ -63,13 +63,6 @@
           <h1 class="text-center">ACCOUNT PAGE</h1>
         </div>
         <div class="account-title-area-button-wrapper">
-          <a href="/account/edit">
-            <div class="account-title-area-button bg-oldlace">
-              <p class="text-center font-20 letter-01">ACCOUNT EDIT</p>
-            </div>
-          </a>
-        </div>
-        <div class="account-title-area-button-wrapper">
           <a href="/logout">
             <div class="account-logout-button button-darkgreen">
               <p class="text-center font-20 letter-01">LOGOUT</p>
@@ -293,13 +286,30 @@
 
           <div class="account-info-right-area">
             <div class="info-wrapper flex-col">
-              <!-- <div class="info-area flex">
-                <div class="info-description-wrapper flex-col">
-                  <div class="description-label-wrapper">
+              <div class="info-area flex">
+                <div class="button-info-description-wrapper flex-col">
+                  <div class="button-description-label-wrapper">
+                    <label for="number">ACCOUNT EDIT</label>
+                  </div>
+                  <div class="button-description-wrapper">
+                    <p class="font-18 letter-005 text-dimgrey">アカウントの編集はこちらから</p>
+                  </div>
+                </div>
+                <div class="info-change-button-wrapper">
+                  <a href="/logout">
+                    <div class="button-wrapper bg-oldlace">
+                      <p class="text-center font-20">EDIT</p>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="info-area flex">
+                <div class="button-info-description-wrapper flex-col">
+                  <div class="button-description-label-wrapper">
                     <label for="number">SHARERS</label>
                   </div>
-                  <div class="description-wrapper">
-                    <p class="font-18 text-dimgrey">共有している人数</p>
+                  <div class="button-description-wrapper">
+                    <p class="font-18 letter-005 text-dimgrey">free-timeを共有している人数</p>
                   </div>
                 </div>
                 <div class="info-result-wrapper">
@@ -307,21 +317,14 @@
                     <p class="text-center font-22">02 人</p>
                   </div>
                 </div>
-                <div class="info-change-button-wrapper">
-                  <a href="/account/">
-                    <div class="button-wrapper button-saddlebrown">
-                      <p class="text-center letter-005  font-20">SHARE OFF</p>
-                    </div>
-                  </a>
-                </div>
               </div>
               <div class="info-area flex">
-                <div class="info-description-wrapper flex-col">
-                  <div class="description-label-wrapper">
+                <div class="button-info-description-wrapper flex-col">
+                  <div class="button-description-label-wrapper">
                     <label for="number">SHARERS</label>
                   </div>
-                  <div class="description-wrapper">
-                    <p class="font-18 letter-005 text-dimgrey">共有されている人数</p>
+                  <div class="button-description-wrapper">
+                    <p class="font-18 letter-005 text-dimgrey">free-timeが共有されている人数</p>
                   </div>
                 </div>
                 <div class="info-result-wrapper">
@@ -329,80 +332,20 @@
                     <p class="text-center font-22">102 人</p>
                   </div>
                 </div>
-                <div class="info-change-button-wrapper">
-                  <a href="/account/">
-                    <div class="button-wrapper button-saddlebrown">
-                      <p class="text-center font-20">SHARE OFF</p>
-                    </div>
-                  </a>
-                </div>
-              </div> -->
-              <div class="info-area flex">
-                <div class="button-info-description-wrapper flex-col">
-                  <div class="button-description-label-wrapper">
-                    <label for="number">SHARERS</label>
-                  </div>
-                  <div class="button-description-wrapper">
-                    <p class="font-18 letter-005 text-dimgrey">共有している人の整理はこちら</p>
-                  </div>
-                </div>
-                <div class="info-change-button-wrapper">
-                  <a href="/account/">
-                    <div class="button-wrapper button-saddlebrown">
-                      <p class="text-center font-20">SHARE</p>
-                    </div>
-                  </a>
-                </div>
               </div>
               <div class="info-area flex">
                 <div class="button-info-description-wrapper flex-col">
                   <div class="button-description-label-wrapper">
-                    <label for="number">SHARERS</label>
+                    <label for="number">REGISTERS</label>
                   </div>
                   <div class="button-description-wrapper">
-                    <p class="font-18 letter-005 text-dimgrey">共有されている人の整理はこちら</p>
+                    <p class="font-18 letter-005 text-dimgrey">free-timeの登録件数件数</p>
                   </div>
                 </div>
-                <div class="info-change-button-wrapper">
-                  <a href="/account/">
-                    <div class="button-wrapper button-saddlebrown">
-                      <p class="text-center font-20">RESET</p>
-                    </div>
-                  </a>
-                </div>
-              </div>
-              <div class="info-area flex">
-                <div class="button-info-description-wrapper flex-col">
-                  <div class="button-description-label-wrapper">
-                    <label for="number">PASSWORD RESET</label>
+                <div class="info-result-wrapper">
+                  <div class="result-wrapper box-ghostwhite">
+                    <p class="text-center font-22">102 件</p>
                   </div>
-                  <div class="button-description-wrapper">
-                    <p class="font-18 letter-005 text-dimgrey">パスワードリセットはこちら</p>
-                  </div>
-                </div>
-                <div class="info-change-button-wrapper">
-                  <a href="/account/">
-                    <div class="button-wrapper button-saddlebrown">
-                      <p class="text-center font-20">RESET</p>
-                    </div>
-                  </a>
-                </div>
-              </div>
-              <div class="info-area flex">
-                <div class="button-info-description-wrapper flex-col">
-                  <div class="button-description-label-wrapper">
-                    <label for="number">LOGOUT</label>
-                  </div>
-                  <div class="button-description-wrapper">
-                    <p class="font-18 letter-005 text-dimgrey">ログアウトはこちら</p>
-                  </div>
-                </div>
-                <div class="info-change-button-wrapper">
-                  <a href="/logout">
-                    <div class="button-wrapper button-darkgreen">
-                      <p class="text-center font-20">LOGOUT</p>
-                    </div>
-                  </a>
                 </div>
               </div>
             </div>
