--- a/src/internal/web/template/account.html
+++ b/src/internal/web/template/account.html
@@ -15,44 +15,46 @@
   </head>
   <body>
     <header class="header-wrapper bg-white">
-      <div class="header m-auto items-center flex bg-white">
-        <div class="header-link-wrapper">
-          <a href="/index">
-            <div class="header-link">
-              <p class="font-24 letter-005">TOP</p>
-            </div>
-          </a>
-        </div>
-        <div class="header-link-wrapper">
-          <a href="/free-time">
-            <div class="header-link">
-              <p class="font-24 letter-005">FREE-TIME LATEST</p>
-            </div>
-          </a>
-        </div>
-        <div class="header-link-wrapper">
-          <a href="/free-times">
-            <div class="header-link">
-              <p class="font-24 letter-005">FREE-TIMES</p>
-            </div>
-          </a>
-        </div>
-        <div class="header-link-wrapper">
-          <a href="/share/with_someone">
-            <div class="header-link">
-              <p class="font-24 letter-005">SHARE</p>
-            </div>
-          </a>
-        </div>
-        <div class="header-link-wrapper">
-          <a href="/account/">
-            <div class="header-link">
-              <p class="font-24 letter-005">ACCOUNT</p>
-            </div>
-          </a>
-        </div>
-        <div id="today-wrapper" class="text-center font-24">
-          <span id="today" class="blinking"></span>
+      <div class="header-wrapper-line bg-white">
+        <div class="header flex m-auto items-center bg-white">
+          <div class="header-link-wrapper">
+            <a href="/index">
+              <div class="header-link">
+                <p class="font-24 letter-005">TOP</p>
+              </div>
+            </a>
+          </div>
+          <div class="header-link-wrapper">
+            <a href="/free-time">
+              <div class="header-link">
+                <p class="font-24 letter-005">FREE-TIME LATEST</p>
+              </div>
+            </a>
+          </div>
+          <div class="header-link-wrapper">
+            <a href="/free-times">
+              <div class="header-link">
+                <p class="font-24 letter-005">FREE-TIMES</p>
+              </div>
+            </a>
+          </div>
+          <div class="header-link-wrapper">
+            <a href="/share/with_someone">
+              <div class="header-link">
+                <p class="font-24 letter-005">SHARE</p>
+              </div>
+            </a>
+          </div>
+          <div class="header-link-wrapper">
+            <a href="/account/">
+              <div class="header-link">
+                <p class="font-24 letter-005">ACCOUNT</p>
+              </div>
+            </a>
+          </div>
+          <div id="today-wrapper" class="text-center font-24">
+            <span id="today" class="blinking"></span>
+          </div>
         </div>
       </div>
     </header>
@@ -62,7 +64,7 @@
         <div class="title-area bg-white">
           <h1 class="text-center">ACCOUNT PAGE</h1>
         </div>
-        <div class="account-title-area-button-wrapper">
+        <div class="title-area-button-wrapper">
           <a href="/logout">
             <div class="account-logout-button button-darkgreen">
               <p class="text-center font-20 letter-01">LOGOUT</p>
@@ -296,10 +298,8 @@
                   </div>
                 </div>
                 <div class="info-change-button-wrapper">
-                  <a href="/logout">
-                    <div class="button-wrapper bg-oldlace">
-                      <p class="text-center font-20">EDIT</p>
-                    </div>
+                  <a href="/account/edit">
+                    <p class="back-link text-center font-22">EDIT</p>
                   </a>
                 </div>
               </div>
