--- a/src/internal/web/static/css/header.css
+++ b/src/internal/web/static/css/header.css
@@ -4,21 +4,31 @@
   position: fixed;
   z-index: 20;
 }
-.header {
+.header-wrapper-line {
   width: 97%;
-  height: 10vh;
-  margin-top: 10px;
-  border-style: solid;
-  border-top-width: thick;
-  border-right-width: thin;
-  border-bottom-width: medium;
-  border-left-width: 20px;
-  box-shadow: 7px 2px 10px rgba(0,0,0,.6);
+  height: 95%;
+
+  --bg-gradient: linear-gradient(#333 0 100%);
+    padding: 0.8rem;
+    background-image:
+        var(--bg-gradient),
+        var(--bg-gradient),
+        var(--bg-gradient),
+        var(--bg-gradient);
+    background-repeat: no-repeat;
+    background-size: 60% 2px, 2px 40%, 60% 2px, 2px 40%;
+    background-position: left 15px, right 15px bottom, right bottom 15px, left 15px top;
+}
+.header {
+  width: 99.4%;
+  height: 90.8%;
+  margin-top: 0.3%;
+  margin-right: 0.3%;
+  box-shadow: 7px 7px 7px rgba(54, 54, 54, 0.3);
 }
 .header-link-wrapper {
   height: 60%;
   margin-left: 2%;
-  background-color:antiquewhite;
 }
 .header-link-wrapper:nth-child(1) {
   width: 6%;
