--- a/src/internal/web/template/share-with-me.html
+++ b/src/internal/web/template/share-with-me.html
@@ -15,44 +15,46 @@
   </head>
   <body>
     <header class="header-wrapper bg-white">
-      <div class="header m-auto items-center flex bg-white">
-        <div class="header-link-wrapper">
-          <a href="/index">
-            <div class="header-link">
-              <p class="font-24 letter-005">TOP</p>
-            </div>
-          </a>
-        </div>
-        <div class="header-link-wrapper">
-          <a href="/free-time">
-            <div class="header-link">
-              <p class="font-24 letter-005">FREE-TIME LATEST</p>
-            </div>
-          </a>
-        </div>
-        <div class="header-link-wrapper">
-          <a href="/free-times">
-            <div class="header-link">
-              <p class="font-24 letter-005">FREE-TIMES</p>
-            </div>
-          </a>
-        </div>
-        <div class="header-link-wrapper">
-          <a href="/share/with_someone">
-            <div class="header-link">
-              <p class="font-24 letter-005">SHARE</p>
-            </div>
-          </a>
-        </div>
-        <div class="header-link-wrapper">
-          <a href="/account/">
-            <div class="header-link">
-              <p class="font-24 letter-005">ACCOUNT</p>
-            </div>
-          </a>
-        </div>
-        <div id="today-wrapper" class="text-center font-24">
-          <span id="today" class="blinking"></span>
+      <div class="header-wrapper-line bg-white">
+        <div class="header flex m-auto items-center bg-white">
+          <div class="header-link-wrapper">
+            <a href="/index">
+              <div class="header-link">
+                <p class="font-24 letter-005">TOP</p>
+              </div>
+            </a>
+          </div>
+          <div class="header-link-wrapper">
+            <a href="/free-time">
+              <div class="header-link">
+                <p class="font-24 letter-005">FREE-TIME LATEST</p>
+              </div>
+            </a>
+          </div>
+          <div class="header-link-wrapper">
+            <a href="/free-times">
+              <div class="header-link">
+                <p class="font-24 letter-005">FREE-TIMES</p>
+              </div>
+            </a>
+          </div>
+          <div class="header-link-wrapper">
+            <a href="/share/with_someone">
+              <div class="header-link">
+                <p class="font-24 letter-005">SHARE</p>
+              </div>
+            </a>
+          </div>
+          <div class="header-link-wrapper">
+            <a href="/account/">
+              <div class="header-link">
+                <p class="font-24 letter-005">ACCOUNT</p>
+              </div>
+            </a>
+          </div>
+          <div id="today-wrapper" class="text-center font-24">
+            <span id="today" class="blinking"></span>
+          </div>
         </div>
       </div>
     </header>
