--- a/src/internal/web/template/share-with-someone.html
+++ b/src/internal/web/template/share-with-someone.html
@@ -64,18 +64,21 @@
         <div class="title-area bg-white">
           <h1 class="text-center">SHARING PAGE</h1>
         </div>
-        <div class="sharing-button-wrapper mr flex">
-          <a href="/share/with_someone"  class="letter-01">
-            <div class="sharing-title-area-button bg-oldlace text-center">
+
+        <a href="/share/with_someone" class="sharing-page-button-wrapper">
+          <div class="sharing-page-button bg-oldlace">
+            <p class="text-center font-20">
               SHARE WITH SOMEONE
-            </div>
-          </a>
-          <a href="/share/with_me"  class="letter-01">
-            <div class="sharing-title-area-button bg-oldlace text-center">
+            </p>
+          </div>
+        </a>
+        <a href="/share/with_me" class="sharing-page-button-wrapper">
+          <div class="sharing-page-button bg-oldlace">
+            <p class="text-center font-20">
               SHARE WITH ME
-            </div>
-          </a>
-        </div>
+            </p>
+          </div>
+        </a>
       </div>
 
       <div class="content-wrapper flex">
