--- a/src/internal/web/static/css/sharing.css
+++ b/src/internal/web/static/css/sharing.css
@@ -11,11 +11,24 @@
   left: 50%;
 }
 
-.sharing-title-area-button {
-  width: 280px;
-  height: 60px;
-  margin: 0 30px;
-  line-height: 60px;
+.sharing-page-button-wrapper {
+  width: 16%;
+  height: 80%;
+  margin-left: 5%;
+  margin-top: auto;
+  /* margin: auto 10% 0 0%; */
+}
+.sharing-page-button-wrapper:nth-child(2) {
+  width: 20%;
+  height: 80%;
+  margin-left: 23%;
+  margin-top: auto;
+  /* margin: auto 10% 0 0%; */
+}
+.sharing-page-button {
+  width: 100%;
+  height: 100%;
+  margin: auto 2%;
   text-decoration: none;
   font-size: 18px;
   border-radius: 8px;
@@ -23,6 +36,38 @@
   transition: 0.3s;
   overflow: hidden;
   box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 4px 4px 5px 0px rgba(43, 43, 43, 0.3);
+}
+.sharing-page-button::before {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 75%;
+  position: absolute;
+  left: 0;
+  background-color: var(--WOOD);
+  transition: .3s;
+}
+.sharing-page-button::after {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 75%;
+  position: absolute;
+  right: 0;
+  background-color: var(--WOOD);
+  transition: .3s;
+}
+.sharing-page-button::before {
+  top: 0;
+}
+.sharing-page-button::after {
+  bottom: 0;
+}
+.sharing-page-button:hover::before {
+  transform: translateX(-100%);
+}
+.sharing-page-button:hover::after {
+  transform: translateX(100%);
 }
 .share-form-wrapper {
   width: 50%;
