--- a/src/internal/web/static/css/main.css
+++ b/src/internal/web/static/css/main.css
@@ -10,7 +10,6 @@
 
 .heading-wrapper {
   width: 100%;
-  margin-top: 1%;
   position: fixed;
   z-index: 10;
 }
@@ -68,13 +67,12 @@
 .title-area-wrapper {
   width: 100%;
   height: 10vh;
-  margin-top: 1%;
+  margin-top: 2%;
 }
 
 .title-area {
   position: relative;
   display: inline-block;
-  margin-top: 1%;
   margin-left: 2.5%;
   width: 30%;
   height: 100%;
@@ -316,58 +314,6 @@
 .account-logout-button:hover::after {
   transform: translateX(100%);
 }
-.sharing-button-area {
-  width: 100%;
-  height: 100%;
-}
-.sharing-button-wrapper {
-  width: 25%;
-  height: 100%;
-}
-.sharing-button {
-  width: 100%;
-  height: 80%;
-  margin: 0% 2% 0 0;
-  line-height: 100%;
-  text-decoration: none;
-  border-radius: 8px;
-  position: relative;
-  transition: 0.3s;
-  overflow: hidden;
-  box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 4px 4px 5px 0px rgba(43, 43, 43, 0.3);
-}
-.sharing-button::before {
-  content: "";
-  display: block;
-  height: 1.5px;
-  width: 75%;
-  position: absolute;
-  left: 0;
-  background-color: var(--SNOW);
-  transition: .3s;
-}
-.sharing-button:after {
-  content: "";
-  display: block;
-  height: 1.5px;
-  width: 75%;
-  position: absolute;
-  right: 0;
-  background-color: var(--SNOW);
-  transition: .3s;
-}
-.sharing-button::before {
-  top: 0;
-}
-.sharing-button::after {
-  bottom: 0;
-}
-.sharing-button:hover::before {
-  transform: translateX(-100%);
-}
-.sharing-button:hover::after {
-  transform: translateX(100%);
-}
 
 /* =================== content ====================== */
 
@@ -378,8 +324,10 @@
 
 .content-left-area {
   width: 20%;
-  height: 68vh;
-  padding-top: 20px;
+  height: 70vh;
+  margin-top: 2%;
+  border: none;
+  border-right: 1px solid #000;
 }
 
 .select-schedule-left-area {
@@ -396,19 +344,6 @@
   width: 80%;
   padding-top: 66px;
   padding-bottom: 66px;
-}
-
-.content-left {
-  width: 80%;
-  height: 60px;
-  margin-top: 30px;
-  border: 1px solid #000;
-  border-radius: 15px;
-}
-
-.content-left p {
-  font-size: 22px;
-  letter-spacing: 0.05em;
 }
 
 .content-left-form {
